# TinyShell

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_cpp_tool.bat  log.md  mau.md  move.bat  run.bat  test2.bat
apps/: 11.cpp  CMakeLists.txt  countdown.cpp  hello.cpp  snake.cpp
config/: .myshell_config  .myshell_env
cpp/: CMakeLists.txt  fileDump.cpp  shell_help.cpp
include/: cal.h  condition_evaluator.h  constant.h  directory_manager.h  flow_control.h  globals.h  interpreter.h  path_manager.h  process.h  script_io.h  system_commands.h  utils.h  variable_manager.h
include/ast/: block_node.h  builder.h  command_node.h  for_node.h  gb.h  if_node.h  node.h  while_note.h
include/editor/: editor.h
include/execution/: color_command.h  process.h  system_commands.h
include/filesystem/: directory_manager.h  path_manager.h
include/parsing/: condition_evaluator.h  script_io.h
include/parsing/ast/: block_node.h  builder.h  command_node.h  for_node.h  gb.h  if_node.h  while_note.h
include/utilities/: cal.h  utils.h
include/variables/: variable_manager.h
root/: danang  myscript.txt  notes.txt  rr  sssss  test.txt  test1.bat  test2.bat  test3.bat  test5.bat  thinh2.bat
root/bat/: test1.bat  test2.bat  test3.bat  test4.bat  test6.bat  test8.bat
root/dump/: cao.txt
root/exe/: gg.lnk
root/hello1/: rrrr
root/minh/: minh.txt
root/test/: test1.bat  test2.bat  test3.bat  test4.bat  test5.bat  thinh2.bat
root/thinh/test/: test3.bat  test4.bat  test8.bat
src/: cal.cpp  condition_evaluator.cpp  directory_manager.cpp  flow_control.cpp  interpreter.cpp  main.cpp  path_manager.cpp  process.cpp  script_io.cpp  system_commands.cpp  utils.cpp  variable_manager.cpp
src/app/: main.cpp
src/ast/: block_node.cpp  builder.cpp  command_node.cpp  for_node.cpp  if_node.cpp  while_node.cpp
src/editor/: editor.cpp
src/execution/: color_command.cpp  process.cpp  system_commands.cpp
src/filesystem/: directory_manager.cpp  path_manager.cpp
src/parsing/: condition_evaluator.cpp  script_io.cpp
src/parsing/ast/: block_node.cpp  builder.cpp  command_node.cpp  for_node.cpp  if_node.cpp  while_node.cpp
src/utilities/: cal.cpp  utils.cpp
src/variables/: variable_manager.cpp
test/: TestNotepad.c  TestStdHandle.c  ThreadTest.c  ThreadTest2.c  ThreadTest3.c  TinyShell.c
